infra/k8s/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web
  namespace: support-me
spec:
  parentRefs:
    - name: support-me-gateway
  hostnames:
    - please-support-me.pl
  rules:
    - backendRefs:
        - name: web
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-gateway
  namespace: support-me
spec:
  parentRefs:
    - name: support-me-gateway
  hostnames:
    - api.please-support-me.pl
  rules:
    - backendRefs:
        - name: api-gateway
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  namespace: support-me
spec:
  parentRefs:
    - name: support-me-gateway
  hostnames:
    - auth.please-support-me.pl
  rules:
    - backendRefs:
        - name: auth
          port: 8080
